...
                    focusedIndicatorColor = Color.Transparent,
                    unfocusedIndicatorColor = Color.Transparent,
                    disabledIndicatorColor = Color.Transparent
                ),
                singleLine = true,
                label ={
                    Text("Enter Your First Name", color = Colors.grey)
                },
                onValueChange = {
                    firstName = it.trim()
                },
                keyboardOptions = KeyboardOptions(imeAction = ImeAction.Next)
//                    placeholder = {Text("Enter Your First Name", color =Colors.grey)}
...
                    focusedIndicatorColor = Color.Transparent,
                    unfocusedIndicatorColor = Color.Transparent,
                    disabledIndicatorColor = Color.Transparent
                ),
                singleLine = true,
                label ={
                    Text("Enter Your Last Name", color = Colors.grey)
                },
                onValueChange = {
                    lastName = it.trim()
                }
//                    placeholder = {Text("Enter Your First Name", color =Colors.grey)}
            )
...
                    focusedIndicatorColor = Color.Transparent,
                    unfocusedIndicatorColor = Color.Transparent,
                    disabledIndicatorColor = Color.Transparent
                ),
                singleLine = true,
                label ={
                    Text("Enter Your Email", color = Colors.grey)
                },
//                    visualTransformation = PasswordVisualTransformation(),
                onValueChange = {
                    email = it.trim()
                }
            )
...
                    focusedIndicatorColor = Color.Transparent,
                    unfocusedIndicatorColor = Color.Transparent,
                    disabledIndicatorColor = Color.Transparent
                ),
                singleLine = true,
                label ={
                    Text("Enter Your New Password", color = Colors.grey)
                },
                onValueChange = {
                    newPassword = it.trim()
                }
//                    placeholder = {Text("Enter Your First Name", color =Colors.grey)}
            )
...
                    focusedIndicatorColor = Color.Transparent,
                    unfocusedIndicatorColor = Color.Transparent,
                    disabledIndicatorColor = Color.Transparent
                ),
                singleLine = true,
                label ={
                    Text("Enter Your Confirm Password", color = Colors.grey)
                },
                onValueChange = {
                    confirmPassword = it.trim()
                }

            )
...
