...
                colors = TextFieldDefaults.textFieldColors(
                    containerColor = Colors.white,
                    focusedIndicatorColor = Color.Transparent,
                    unfocusedIndicatorColor = Color.Transparent,
                    disabledIndicatorColor = Color.Transparent
                ),
                placeholder = {Text("Enter Your Password",color=Colors.grey)},
                visualTransformation = PasswordVisualTransformation(),
                keyboardOptions = KeyboardOptions(imeAction = ImeAction.Next),
                /*
                isError = passwordInvalid.value && passwordComposable.value.isNotEmpty(),
                supportingText = {
                    if (passwordInvalid.value && passwordComposable.value.isNotEmpty()) {
...
//                        .background(Color.Transparent)
                    .align(Alignment.End),
                onClick = {
                    Toast.makeText(ctx, "Not Implemented Yet", Toast.LENGTH_SHORT).show()
                }
            ) {
                Text("Forget Password",color=Colors.primaryOrange)
            }
        }
//        BoxWithConstraints {
//            Box(modifier = Modifier
//                .width(maxWidth).height(maxHeight)
//                .background(Colors.primaryOrange))
...
