...
                modifier = Modifier
                    .padding(60.dp, vertical = 0.dp),
            ) {
                Text(
                    modifier = Modifier
                        .padding(45.dp, 0.dp, 0.dp, 0.dp),
                    text = "Profile",
                    fontSize = 20.sp,
                    color = Colors.primaryOrange,
                    fontWeight = FontWeight.Bold,
                )
            }
        }
...
                        focusedIndicatorColor = Color.Transparent,
                        unfocusedIndicatorColor = Color.Transparent,
                        disabledIndicatorColor = Color.Transparent
                    ),
                    singleLine = true,
                    label ={
                        if (address.isEmpty()) {Text("Enter Your Address", color = Colors.grey)}
                    },
//                    visualTransformation = PasswordVisualTransformation(),
                    onValueChange = {
                       address = it
                    }
                )
...
