...
                    color = Color(0xFFFAA73D),
                    textAlign = TextAlign.Left,
                    fontWeight = FontWeight.Bold,
                    fontSize = 20.sp
                )
                Text(
                    text = if(userViewModel.currentUserType.value == UserType.COOK) "Cook virtually, dine deliciously!" else "Cook with Passion, Serve with Pride!",
                    color = Color(0xFFFAA73D),
                    textAlign = TextAlign.Left,
                    fontSize = 12.sp
                )
            }
            Box(modifier = Modifier
...
